Fixed bug where with an empty countries DB, game would be stuck on Loading Flags screen forever
Fixed DB cloning each country's data

Added highlighting of your score

Created User schema and signup route in server.js

To do:
Finish signup and login routes and components
Integrate auth into current game components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,6 +61,11 @@ body {
   gap:10px;
 }
 
+.highlight {
+  box-shadow: 0 0 5px white;
+  color:white;
+}
+
 #leaderboard-table {
   border-spacing:30px 5px;
 }
